--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 .idea
 .data
 
-data/_delete/
+data/delete/
 data/box_bump/
 data/torus_bump/
 data/sdf/
+
+synthetic_data/box_bump/
+synthetic_data/torus_bump/
+synthetic_data/sdf
