--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ synthetic_data/box_bump/
 synthetic_data/torus_bump/
 synthetic_data/sdf/
 synthetic_data/_delete/
+
+src/ShapeWorks/data/
+src/ShapeWorks/groomed/
+src/ShapeWorks/shape_model/
